--- a/examples/package.json
+++ b/examples/package.json
@@ -8,19 +8,19 @@
   },
   "types": "./dist/index.d.ts",
   "dependencies": {
-    "esbuild": "^0.17.15",
-    "esbuild-plugin-replace": "^1.3.0",
-    "esbuild-svelte": "^0.7.3",
-    "svelte": "^3.58.0",
-    "svelte-inline-compiler": "^0.0.2",
-    "svelte-preprocess": "^5.0.3"
+    "esbuild": "0.17.15",
+    "esbuild-plugin-replace": "1.3.0",
+    "esbuild-svelte": "0.7.3",
+    "svelte": "3.58.0",
+    "svelte-inline-compiler": "0.0.2",
+    "svelte-preprocess": "5.0.3"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17",
-    "@types/node": "^18.15.11",
-    "express": "^4.18.2",
-    "nodemon": "^2.0.22",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.0.3"
+    "@types/express": "4.17.17",
+    "@types/node": "18.15.11",
+    "express": "4.18.2",
+    "nodemon": "2.0.22",
+    "ts-node": "10.9.1",
+    "typescript": "5.0.3"
   }
 }
