--- a/package.json
+++ b/package.json
@@ -24,16 +24,16 @@
   },
   "types": "./dist/index.d.ts",
   "dependencies": {
-    "esbuild": "^0.17.15",
-    "esbuild-plugin-replace": "^1.3.0",
-    "esbuild-svelte": "^0.7.3",
-    "svelte": "^3.58.0",
-    "svelte-preprocess": "^5.0.3"
+    "esbuild": "0.17.15",
+    "esbuild-plugin-replace": "1.3.0",
+    "esbuild-svelte": "0.7.3",
+    "svelte": "3.58.0",
+    "svelte-preprocess": "5.0.3"
   },
   "devDependencies": {
-    "@types/node": "^18.15.11",
-    "nodemon": "^2.0.22",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.0.3"
+    "@types/node": "18.15.11",
+    "nodemon": "2.0.22",
+    "ts-node": "10.9.1",
+    "typescript": "5.0.3"
   }
 }
