Take only first generated code output from esbuild

--- a/.gitignore
+++ b/.gitignore
@@ -70,6 +70,7 @@ build/Release
 
 # Dependency directories
 node_modules/
+examples/node_modules/
 jspm_packages/
 
 # Snowpack dependency directory (https://snowpack.dev/)
