--- a/examples/package.json
+++ b/examples/package.json
@@ -8,9 +8,11 @@
   },
   "types": "./dist/index.d.ts",
   "dependencies": {
+    "@sveltejs/svelte-virtual-list": "3.0.1",
     "esbuild": "0.17.15",
     "esbuild-plugin-replace": "1.3.0",
     "esbuild-svelte": "0.7.3",
+    "namey-mcnameface": "1.0.3",
     "svelte": "3.58.0",
     "svelte-inline-compiler": "0.0.5",
     "svelte-preprocess": "5.0.3"
