--- a/examples/package.json
+++ b/examples/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "dev": "nodemon --experimental-specifier-resolution=node --watch 'src/**' --ext 'ts,json' --exec 'node --loader ts-node/esm src/server.ts'"
+    "dev": "nodemon --experimental-specifier-resolution=node --watch 'src/**' --ext 'ts,json' --exec 'node --loader ts-node/esm src/server.ts'",
+    "build": "tsc"
   },
   "type": "module",
   "exports": {
@@ -8,6 +9,11 @@
   },
   "types": "./dist/index.d.ts",
   "dependencies": {
+    "@smui/button": "7.0.0-beta.3",
+    "@smui/card": "7.0.0-beta.3",
+    "@smui/common": "7.0.0-beta.3",
+    "@smui/textfield": "7.0.0-beta.3",
+    "@smui/top-app-bar": "7.0.0-beta.3",
     "@sveltejs/svelte-virtual-list": "3.0.1",
     "esbuild": "0.17.15",
     "esbuild-plugin-replace": "1.3.0",
