--- a/examples/package.json
+++ b/examples/package.json
@@ -1,7 +1,8 @@
 {
   "scripts": {
-    "dev": "nodemon --experimental-specifier-resolution=node --watch 'src/**' --ext 'ts,json' --exec 'node --loader ts-node/esm src/server.ts'",
-    "build": "tsc"
+    "dev": "nodemon --experimental-specifier-resolution=node --watch 'src/**' --ext 'ts,json' --exec 'node --loader ts-node/esm src/index.ts'",
+    "build": "tsc",
+    "start": "node index.js"
   },
   "type": "module",
   "exports": {
@@ -30,5 +31,8 @@
     "nodemon": "2.0.22",
     "ts-node": "10.9.1",
     "typescript": "5.0.3"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
