--- a/examples/tsconfig.json
+++ b/examples/tsconfig.json
@@ -7,14 +7,9 @@
     "skipLibCheck": true,
     "esModuleInterop": true,
     "moduleResolution": "node",
-    "outDir": "./dist",
+    "outDir": "./public",
     "typeRoots": ["types", "node_modules/@types"],
-    "declaration": true,
     "allowJs": true
   },
-  "include": [
-    "src/**/*.ts",
-    "**/*.d.ts",
-    "src/compiler/generators/wrappers/*.js"
-  ]
+  "include": ["src/**/*.ts", "**/*.d.ts"]
 }
