--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.5",
+  "version": "0.0.6",
   "name": "svelte-inline-compiler",
   "author": {
     "email": "zahirovic.safet@gmail.com",
@@ -27,6 +27,7 @@
     "esbuild": "0.17.15",
     "esbuild-plugin-replace": "1.3.0",
     "esbuild-svelte": "0.7.3",
+    "node-cache": "5.1.2",
     "svelte": "3.58.0",
     "svelte-preprocess": "5.0.3"
   },
