Add README to files

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.9",
+  "version": "0.0.10",
   "name": "svelte-inline-compiler",
   "author": {
     "email": "zahirovic.safet@gmail.com",
@@ -17,7 +17,8 @@
     "types/*",
     "package.json",
     "tsconfig.json",
-    "CHANGELOG.md"
+    "CHANGELOG.md",
+    "README.md"
   ],
   "type": "module",
   "exports": {
